--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{include = "thants", from = "src"}]
 [tool.poetry.dependencies]
 python = "^3.10"
 esquilax = "^2.1.0"
+jumanji = "^1.1.1"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -20,3 +21,7 @@ taskipy = "^1.14.1"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.taskipy.tasks]
+test = { cmd = "pytest tests", help="Run tests"}
+lint = { cmd = "pre-commit run --all-files", help="Code format checks"}
