--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -51,4 +51,4 @@ jobs:
         merge-multiple: true
         path: dist/
     - name: Publish distribution 📦 to PyPI
-      uses: pypa/gh-action-pypi-publish@1.13.0
+      uses: pypa/gh-action-pypi-publish@v1.13.0
