--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,3 +32,12 @@ repos:
     rev: 23.12.0
     hooks:
     -   id: black
+
+-   repo: local
+    hooks:
+      - id: mypy
+        name: "Static type checker"
+        entry: python -m mypy src/thants/
+        language: system
+        types: [ python ]
+        pass_filenames: false
