--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ jumanji = "^1.1.1"
 pytest = "^8.4.1"
 pre-commit = "^4.3.0"
 taskipy = "^1.14.1"
+mypy = "^1.18.2"
 
 [build-system]
 requires = ["poetry-core"]
